(fix) Build with proper docker image name

--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ machine:
 dependencies:
   override:
     - docker info
-    - docker build -t ngage-stats .
+    - docker build -t nanongage/ngage-stats .
 
 test:
   override:
